--- a/configs/mcp-config.example.json
+++ b/configs/mcp-config.example.json
@@ -1,7 +1,7 @@
 {
   "mcpServers": {
     "pgedge": {
-      "command": "/path/to/pgedge-mcp",
+      "command": "/absolute/path/to/pgedge-mcp/bin/pgedge-mcp",
       "env": {
         "POSTGRES_CONNECTION_STRING": "postgres://username:password@localhost:5432/database_name?sslmode=disable",
         "ANTHROPIC_API_KEY": "sk-ant-your-api-key-here",
