Ensure the cmd directory exists.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
     - name: Download dependencies
       run: go mod download
 
+    - name: Create cmd directory
+      run: mkdir -p cmd
+
     - name: Build
       run: go build -v -o bin/pgedge-mcp ./cmd/pgedge-mcp
 
