Refactoring and cleanup

--- a/configs/.env.example
+++ b/configs/.env.example
@@ -8,3 +8,7 @@ ANTHROPIC_API_KEY=sk-ant-your-api-key-here
 # Optional: specify Claude model (default: claude-sonnet-4-5)
 # Other options: claude-haiku-4-5, claude-opus-4-1
 ANTHROPIC_MODEL=claude-sonnet-4-5
+
+# Optional: specify Anthropic API base URL (default: https://api.anthropic.com/v1)
+# Use this for API proxies or alternative Claude-compatible endpoints
+# ANTHROPIC_BASE_URL=https://api.anthropic.com/v1
