Avoid cache errors with multiple Go versions.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
       with:
         go-version: ${{ matrix.go-version }}
         cache: true
+        cache-dependency-path: go.sum
 
     - name: Verify dependencies
       run: go mod verify
