--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
       with:
         go-version: ${{ matrix.go-version }}
         cache: true
+        cache-dependency-path: go.sum
 
     - name: Download dependencies
       run: go mod download
@@ -85,6 +86,7 @@ jobs:
       with:
         go-version: ${{ matrix.go-version }}
         cache: true
+        cache-dependency-path: go.sum
 
     - name: Download dependencies
       run: go mod download
