--- a/configs/pgedge-postgres-mcp.yaml.example
+++ b/configs/pgedge-postgres-mcp.yaml.example
@@ -69,16 +69,41 @@ http:
     # Command line flag: -chain
     chain_file: ""
 
+  # Authentication Configuration
+  auth:
+    # Enable API token authentication (requires http.enabled: true)
+    # Default: true (authentication is enabled by default)
+    # Command line flag: -no-auth (to disable)
+    enabled: true
+
+    # Path to API token configuration file
+    # Default: Same directory as binary (api-tokens.yaml)
+    # Command line flag: -token-file
+    # Create tokens with: pgedge-postgres-mcp -add-token
+    token_file: ""
+
 # Example configurations for different deployment scenarios:
 
-# Example 1: Local development with HTTP
+# Example 1: Local development with HTTP (no authentication - not recommended)
 # http:
 #   enabled: true
 #   address: "localhost:8080"
 #   tls:
 #     enabled: false
+#   auth:
+#     enabled: false
 
-# Example 2: Production HTTPS deployment
+# Example 2: Local development with HTTP and authentication
+# http:
+#   enabled: true
+#   address: "localhost:8080"
+#   tls:
+#     enabled: false
+#   auth:
+#     enabled: true
+#     token_file: "./api-tokens.yaml"
+
+# Example 3: Production HTTPS deployment with authentication
 # http:
 #   enabled: true
 #   address: ":443"
@@ -87,8 +112,11 @@ http:
 #     cert_file: "/etc/ssl/certs/server.crt"
 #     key_file: "/etc/ssl/private/server.key"
 #     chain_file: "/etc/ssl/certs/ca-chain.crt"
+#   auth:
+#     enabled: true
+#     token_file: "/etc/pgedge-mcp/tokens.yaml"
 
-# Example 3: Claude Desktop mode (stdio, no HTTP)
+# Example 4: Claude Desktop mode (stdio, no HTTP)
 # http:
 #   enabled: false
 # (This is the default behavior when http.enabled is false)
