--- a/web/package.json
+++ b/web/package.json
@@ -31,7 +31,10 @@
     "express": "^4.18.2",
     "express-session": "^1.18.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^16.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
