--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         build:
             context: .
             dockerfile: Dockerfile.server
-        container_name: pgedge-mcp-server
+        container_name: pgedge-nla-server
         ports:
             - "${MCP_SERVER_PORT:-8080}:8080"
         environment:
@@ -53,7 +53,7 @@ services:
         build:
             context: .
             dockerfile: Dockerfile.web
-        container_name: pgedge-mcp-web-client
+        container_name: pgedge-nla-web-client
         ports:
             - "${WEB_CLIENT_PORT:-8081}:8081"
         depends_on:
@@ -77,7 +77,7 @@ services:
     #     build:
     #         context: .
     #         dockerfile: Dockerfile.cli
-    #     container_name: pgedge-mcp-cli-client
+    #     container_name: pgedge-nla-cli-client
     #     stdin_open: true
     #     tty: true
     #     environment:
