--- a/examples/helm/pgedge-nla/Chart.yaml
+++ b/examples/helm/pgedge-nla/Chart.yaml
@@ -14,6 +14,6 @@ maintainers:
   - name: pgEdge
     email: support@pgedge.com
     url: https://pgedge.com
-home: https://github.com/pgEdge/pgedge-postgres-mcp
+home: https://github.com/pgEdge/pgedge-nla
 sources:
-  - https://github.com/pgEdge/pgedge-postgres-mcp
+  - https://github.com/pgEdge/pgedge-nla
