--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,7 +52,7 @@ extra:
   generator: false
 
 copyright: Copyright &copy; 2025 pgEdge, Inc
-repo_url: https://github.com/pgEdge/pgedge-postgres-mcp
+repo_url: https://github.com/pgEdge/pgedge-nla
 
 nav:
   - Home: index.md
