--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -80,12 +80,12 @@ jobs:
             - name: Build server
               run: |
                   mkdir -p bin
-                  go build -v -o bin/pgedge-nla-server ./cmd/pgedge-pg-mcp-svr
+                  go build -v -o bin/pgedge-mcp-server ./cmd/pgedge-pg-mcp-svr
 
             - name: Verify binary
               run: |
-                  ls -lh bin/pgedge-nla-server
-                  file bin/pgedge-nla-server
+                  ls -lh bin/pgedge-mcp-server
+                  file bin/pgedge-mcp-server
 
             - name: Run server unit tests
               run: go test -v -race -coverprofile=coverage.out -covermode=atomic ./internal/mcp/... ./internal/auth/... ./internal/config/... ./internal/crypto/... ./internal/database/... ./internal/resources/... ./internal/tools/... ./cmd/pgedge-pg-mcp-svr/...
@@ -120,8 +120,8 @@ jobs:
               if: matrix.postgres-version == '18'
               uses: actions/upload-artifact@v4
               with:
-                  name: pgedge-nla-server-linux-amd64
-                  path: bin/pgedge-nla-server
+                  name: pgedge-mcp-server-linux-amd64
+                  path: bin/pgedge-mcp-server
                   retention-days: 7
 
             - name: Upload coverage artifact
