--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -15,17 +15,17 @@ RUN go mod download
 COPY . .
 
 # Build the server binary
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o pgedge-nla-server ./cmd/pgedge-pg-mcp-svr
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o pgedge-mcp-server ./cmd/pgedge-pg-mcp-svr
 
 # Stage 2: Create minimal runtime image
 # Note: Using ubi9-minimal instead of ubi9-micro to get shadow-utils for user switching
 FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 
 # Add labels for container metadata
-LABEL name="pgedge-nla-server" \
+LABEL name="pgedge-mcp-server" \
       vendor="pgEdge" \
       version="1.0" \
-      summary="pgEdge Natural Language Agent Server" \
+      summary="The pgEdge MCP Server" \
       description="Model Context Protocol server for PostgreSQL database interaction"
 
 # Install util-linux for runuser command (needed for user switching in init script)
@@ -38,7 +38,7 @@ RUN useradd -u 1001 -r -s /bin/sh -d /app -c "MCP Server User" mcp
 WORKDIR /app
 
 # Copy the binary from builder
-COPY --from=builder --chown=1001:1001 /workspace/pgedge-nla-server /app/pgedge-nla-server
+COPY --from=builder --chown=1001:1001 /workspace/pgedge-mcp-server /app/pgedge-mcp-server
 
 # Copy initialization script (must be executable and owned by root to create directories)
 COPY --chmod=755 docker/init-server.sh /app/init-server.sh
