--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         build:
             context: .
             dockerfile: Dockerfile.server
-        container_name: pgedge-nla-server
+        container_name: pgedge-mcp-server
         ports:
             - "${MCP_SERVER_PORT:-8080}:8080"
         environment:
