Add doc comparing RAG and MCP

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,7 @@ nav:
   - Quick Start: quickstart.md
 
   - User Guide:
+      - Choosing the Right Solution: guide/mcp-vs-rag.md
       - Deployment: guide/deployment.md
       - Configuration: guide/configuration.md
       - Authentication: guide/authentication.md
