Add anonymizer to the KB.

--- a/examples/pgedge-nla-kb-builder.yaml
+++ b/examples/pgedge-nla-kb-builder.yaml
@@ -90,6 +90,18 @@ sources:
       project_name: "pgEdge Natural Language Agent"
       project_version: "1.0.0-alpha3"
 
+    - git_url: "https://github.com/pgEdge/pgedge-anonymizer.git"
+      branch: "v1.0.0-alpha1"
+      doc_path: "docs"
+      project_name: "pgEdge Anonymizer"
+      project_version: "1.0.0-alpha1"
+
+    - git_url: "https://github.com/pgEdge/pgedge-anonymizer.git"
+      branch: "v1.0.0-alpha2"
+      doc_path: "docs"
+      project_name: "pgEdge Anonymizer"
+      project_version: "1.0.0-alpha2"
+
     - git_url: "https://github.com/pgEdge/pgedge-docloader.git"
       branch: "v1.0.0-alpha1"
       doc_path: "docs"
