--- a/examples/pgedge-nla-kb-builder.yaml
+++ b/examples/pgedge-nla-kb-builder.yaml
@@ -73,7 +73,7 @@ sources:
       project_name: "pgEdge Enterprise"
 
     - git_url: "https://github.com/pgEdge/pgedge-nla.git"
-      branch: "v1.0.0-alpha2"
+      branch: "v1.0.0-alpha1"
       doc_path: "docs"
       project_name: "pgEdge Natural Language Agent"
       project_version: "1.0.0-alpha1"
@@ -108,6 +108,12 @@ sources:
       project_name: "pgEdge Anonymizer"
       project_version: "1.0.0-alpha2"
 
+    - git_url: "https://github.com/pgEdge/pgedge-anonymizer.git"
+      branch: "v1.0.0-alpha3"
+      doc_path: "docs"
+      project_name: "pgEdge Anonymizer"
+      project_version: "1.0.0-alpha3"
+
     - git_url: "https://github.com/pgEdge/pgedge-docloader.git"
       branch: "v1.0.0-alpha1"
       doc_path: "docs"
@@ -119,6 +125,24 @@ sources:
       doc_path: "docs"
       project_name: "pgEdge Docloader"
       project_version: "1.0.0-alpha2"
+
+    - git_url: "https://github.com/pgEdge/pgedge-docloader.git"
+      branch: "v1.0.0-alpha3"
+      doc_path: "docs"
+      project_name: "pgEdge Docloader"
+      project_version: "1.0.0-alpha3"
+
+    - git_url: "https://github.com/pgEdge/pgedge-docloader.git"
+      branch: "v1.0.0-alpha4"
+      doc_path: "docs"
+      project_name: "pgEdge Docloader"
+      project_version: "1.0.0-alpha4"
+
+    - git_url: "https://github.com/pgEdge/pgedge-docloader.git"
+      branch: "v1.0.0-alpha5"
+      doc_path: "docs"
+      project_name: "pgEdge Docloader"
+      project_version: "1.0.0-alpha5"
 
     - git_url: "https://github.com/pgEdge/pgedge-rag-server.git"
       branch: "v1.0.0-alpha1"
@@ -203,6 +227,12 @@ sources:
       doc_path: "docs"
       project_name: "pgEdge Vectorizer"
       project_version: "1.0-alpha3"
+
+    - git_url: "https://github.com/pgEdge/pgedge-vectorizer.git"
+      branch: "v1.0-alpha4"
+      doc_path: "docs"
+      project_name: "pgEdge Vectorizer"
+      project_version: "1.0-alpha4"
 
     - git_url: "https://github.com/pgbouncer/pgbouncer.git"
       branch: "pgbouncer_1_25_0"
